tried to fix resources page wrapper issue
resources page's wrapper not behaving normally. Might be associated with wrapper on-large too high?

--- a/_sass/minima/base.scss
+++ b/_sass/minima/base.scss
@@ -269,13 +269,21 @@ pre {
 
   @extend %clearfix;
 
-  // If on a large screen, just fix the width of the wrapper to make sure it stays its place even if content is short
   @media screen and (min-width: $on-large) {
     flex: 1;
-    // original: max-width:
+    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    padding-top: $spacing-unit;
+    padding-bottom: $spacing-unit;
+  }
+
+  // If on a larger than 1100px screen, just fix the width of the wrapper to make sure it stays its place even if content is short
+  @media screen and (min-width: $on-exlarge) {
+    flex: 1;
     width: calc(#{$content-width} - (#{$spacing-unit} * 2));
-    padding-right: $spacing-unit * 5;
-    padding-left: $spacing-unit * 5;
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
     padding-top: $spacing-unit;
     padding-bottom: $spacing-unit;
   }
@@ -292,9 +300,20 @@ pre {
   padding-top: $spacing-unit;
   padding-bottom: $spacing-unit;
 
+  background-color: rgba(255,255,255,0.87);
+
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
+    flex: 1;
+    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    padding-top: $spacing-unit;
+    padding-bottom: $spacing-unit;
+  }
+
+  @media screen and (min-width: $on-exlarge) {
     flex: 1;
     max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
     padding-right: $spacing-unit * 5;
@@ -302,7 +321,7 @@ pre {
     padding-top: $spacing-unit;
     padding-bottom: $spacing-unit;
   }
-  background-color: rgba(255,255,255,0.87);
+  
 }
 
 
