--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -17,10 +17,11 @@ $table-text-align: left !default;
 $content-width:    800px !default;
 
 $on-palm:          600px !default;
-$on-laptop:        1040px !default;
+$on-laptop:        800px !default;
 
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
+$on-exlarge:       1100px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
